--- a/index.html
+++ b/index.html
@@ -31,23 +31,12 @@
 
 <section class="slide">
     <h2>Generator</h2>
-
-    <p><strike>ES6</strike> ES2015</p>
-
     <div>
         <blockquote>A generator can pause itself in mid-execution, and can be resumed
             either right away or at a later time.
         </blockquote>
     </div>
-</section>
-
-<section class="slide">
-    <h2>Generator</h2>
-
-    <ul>
-        <li>node >= 0.11 --harmony или --harmony-generators</li>
-        <li>TODO: поддержка браузеров</li>
-    </ul>
+    <p><strike>ES6</strike> ES2015</p>
 </section>
 
 <section class="slide">
@@ -73,6 +62,16 @@
     <pre class="javascript">
         <code>&gt;</code>
     </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Iterator</h2>
+    <h3>Объект:</h3>
+    <ul>
+        <li><mark>next(..)</mark></li>
+        <li>return(..)</li>
+        <li>throw(..)</li>
+    </ul>
 </section>
 
 <section class="slide">
@@ -127,12 +126,14 @@
         <code> </code>
         <code>var it = foo();</code>
         <code>console.log(it.next());</code>
+        <code>console.log(it.next());</code>
     </pre>
 
     <div>
         <h3>Console:</h3>
         <pre>
             <code>&gt; {value: "Some data", done: false}</code>
+            <code>&gt; {value: undefined, done: true}</code>
         </pre>
     </div>
 </section>
@@ -172,13 +173,6 @@
         <code>it.next();</code>
         <code><mark>it.next('EkbJS');</mark></code>
     </pre>
-
-    <div>
-        <h3>Console:</h3>
-        <pre>
-            <code>&gt; Hello, EkbJS</code>
-        </pre>
-    </div>
 </section>
 
 <!-- Не забыть рассказать про приоритеты -->
@@ -201,6 +195,11 @@
             <code>&gt; Hello, EkbJS</code>
         </pre>
     </div>
+</section>
+
+<section class="slide caption">
+    <h2>yield *</h2>
+    <img src="images/recursia.gif" alt="recursion"/>
 </section>
 
 <section class="slide">
@@ -292,6 +291,10 @@
         <code>    });</code>
         <code>}</code>
     </pre>
+</section>
+
+<section class="slide" style="text-align: center; ">
+    <img src="images/catIsVacuumed.gif" alt="catIsVacuumed" />
 </section>
 
 <section class="slide">
@@ -420,13 +423,52 @@
     <ul class="custom-list">
         <li class="fail">Накладные расходы</li>
         <li class="done">Один уровень вложенности</li>
-        <li class="done">Обработка ошибок:
+        <li class="done">Централизованная обработка ошибок:
             <ul class="custom-list">
                 <li class="done">try { ... } catch(e) { ... }</li>
                 <li class="done">Обработка в блоке .catch()</li>
             </ul>
         </li>
         <li class="done">Минимум шума</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2><small>Generator</small> Поддержка</h2>
+
+    <ul>
+        <li>node >= 0.11 с флагом --harmony</li>
+        <li>iojs</li>
+        <li>Браузеры 15/21 <a href="https://clck.ru/9VKMq">https://clck.ru/9VKMq</a>:
+            <ul class="custom-list">
+                <li class="done">Chrome 39.0</li>
+                <li class="done">Firefox 26.0</li>
+                <li class="fail">IE (и Edge тоже)</li>
+                <li class="done">Opera 26</li>
+                <li class="fail">Safari</li>
+            </ul>
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2><small>Generator</small> Babel</h2>
+    <div><a href="https://babeljs.io/">https://babeljs.io/</a></div>
+    <ul>
+        <li><a href="https://babeljs.io/docs/setup/">Setup</a>: CLI, Grunt, Gulp, Browserify, ..., WebStorm</li>
+        <li>myFile.jsx -> myFile.js</li>
+        <li>$ node myFile.js</li>
+    </ul>
+
+    <ul>
+        <li>$ babel-node async_generator.jsx</li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Ссылки</h2>
+    <ul>
+        <li><a href="https://github.com/getify/You-Dont-Know-JS/blob/master/es6%20&%20beyond/ch3.md#generators">You-Dont-Know-JS</a></li>
     </ul>
 </section>
 
