--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 <section class="slide">
     <h2><small>Promises.</small> Bluebird</h2>
-    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px;"/>
+    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px; top: 353px;"/>
     <a href="https://github.com/petkaantonov/bluebird">https://github.com/petkaantonov/bluebird</a>
     <ul>
         <li>Promise.promisify(cb);
