--- a/index.html
+++ b/index.html
@@ -125,6 +125,25 @@
 </section>
 
 <section class="slide">
+    <h2><small>Promises.</small> Bluebird</h2>
+    <pre class="javascript">
+        <code>function myFunction(arg1, arg2, cb) {</code>
+        <code>    cb(err, data);</code>
+        <code>}</code>
+        <code> </code>
+        <code>var myPromisifyFunction = Promise.promisify(myFunction);</code>
+        <code>myPromisifyFunction()</code>
+        <code>    .then(function onResolve() { return data; })</code>
+        <code>    .then(function onResolve(data) { ... })</code>
+        <code>    .catch(function onReject() { ... })</code>
+    </pre>
+    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px; top: 383px;"/>
+    <div style="margin-top: 75px;">
+        <a href="https://github.com/petkaantonov/bluebird">https://github.com/petkaantonov/bluebird</a>
+    </div>
+</section>
+
+<section class="slide">
     <h2>Promises</h2>
     <pre class="javascript">
         <code>function getUnpaidFines(carNumber) {</code>
@@ -161,30 +180,11 @@
 </section>
 
 <section class="slide">
-    <h2><small>Promises.</small> Bluebird</h2>
-    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px; top: 353px;"/>
-    <a href="https://github.com/petkaantonov/bluebird">https://github.com/petkaantonov/bluebird</a>
-    <ul>
-        <li>Promise.promisify(cb);
-            <pre class="javascript">
-                <code>var myPromisifyFunction = Promise.promisify(myFunction);</code>
-                <code> </code>
-                <code>function myFunction(arg1, arg2, cb) {</code>
-                <code>    cb(err, data);</code>
-                <code>}</code>
-            </pre>
-        </li>
-        <li>Promise.all([...]);</li>
-        <li>Promise.props({...});</li>
-    </ul>
-</section>
-
-<section class="slide">
     <h2>Promises</h2>
     <ul class="custom-list">
         <li class="fail">Накладные расходы</li>
         <li class="pending">Меньше шума</li>
-        <li class="pending">Неглубокий уровень вложенности</li>
+        <li class="pending">Фиксированный уровень вложенности</li>
         <li class="pending">Обработка ошибок
             <ul class="custom-list">
                 <li class="done">Обработка в блоке .catch()</li>
@@ -197,7 +197,7 @@
 <section class="slide">
     <h2>Идеальный код</h2>
     <pre class="javascript">
-        <code>var getUnpaidFines = function(<mark>Ввести номер автомобиля</mark>) {</code>
+        <code>function getUnpaidFines(<mark>Ввести номер автомобиля</mark>) {</code>
         <code>    var fines = <mark>Получить список штрафов</mark>(carNumber);</code>
         <code>    var isUnpaidFines = fines.map(<mark>Получить статус оплаты</mark>);</code>
         <code>    return <mark>Вывести неоплаченные штрафы</mark>(fines, isUnpaidFines);</code>
@@ -208,7 +208,7 @@
 <section class="slide">
     <h2>Идеальный код</h2>
     <pre class="javascript">
-        <code>var getUnpaidFines = function (carNumber) {</code>
+        <code>function getUnpaidFines(carNumber) {</code>
         <code>    var fines = getFinesByCarNumber(carNumber);</code>
         <code>    var isUnpaidFines = fines.map(isFineUnpaid);</code>
         <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
@@ -219,26 +219,26 @@
 <section class="slide">
     <h2><small>Идеальный код.</small> Generator</h2>
     <pre class="javascript">
-        <code>var getUnpaidFines = co.wrap(function *(carNumber) {</code>
-        <code>    var fines = yield getFinesByCarNumber(carNumber);</code>
-        <code>    var isUnpaidFines = yield fines.map(isFineUnpaid);</code>
+        <code>function <mark>*</mark>getUnpaidFines(carNumber) {</code>
+        <code>    var fines = <mark>yield</mark> getFinesByCarNumber(carNumber);</code>
+        <code>    var isUnpaidFines = <mark>yield</mark> fines.map(isFineUnpaid);</code>
         <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
-        <code>});</code>
+        <code>}</code>
     </pre>
+</section>
+
+<section class="slide cover w" style="text-align: center; ">
+    <img src="images/catsShock.gif" alt="catsShock" />
 </section>
 
 <section class="slide">
     <h2><small>Идеальный код.</small> Generator</h2>
     <pre class="javascript">
-        <code>var getUnpaidFines = co.wrap(function *(carNumber) {</code>
+        <code><mark>co</mark>(function *getUnpaidFines(carNumber) {</code>
         <code>    var fines = yield getFinesByCarNumber(carNumber);</code>
         <code>    var isUnpaidFines = yield fines.map(isFineUnpaid);</code>
         <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
-        <code>});</code>
-    </pre>
-    <br/>
-    <pre class="javascript">
-        <code>getUnpaidFines('A263BC')</code>
+        <code>}) </code>
         <code>    .then(console.log.bind(console))</code>
         <code>    .catch(console.error.bind(console));</code>
     </pre>
@@ -284,21 +284,16 @@
 <section class="slide">
     <h2><small>Generator.</small> Iterator</h2>
     <blockquote>An iterator is a structured pattern for pulling information from a source in one-at-a-time fashion.</blockquote>
-    <ul>
-        <li>Iterator
-            <ul>
-                <li><b>next()</b> <i>{method}</i>: retrieves next IteratorResult</li>
-                <li><b>return()</b> <i>{method}</i>: stops iterator and returns IteratorResult</li>
-                <li><b>throw()</b> <i>{method}</i>: signals error and returns IteratorResult</li>
-            </ul>
-        </li>
-        <li>IteratorResult
-            <ul>
-                <li><b>value</b> <i>{property}</i>: current iteration value or final return value</li>
-                <li><b>done</b> <i>{property}</i>: boolean, indicates completion status</li>
-            </ul>
-        </li>
-    </ul>
+    <pre class="javascript">
+        <code>it.next()</code>
+    </pre>
+
+    <div class="console_port">
+        <h3>Console:</h3>
+        <pre class="console">
+            <code>&gt; { value: {...}, done: false}</code>
+        </pre>
+    </div>
 </section>
 
 <section class="slide">
@@ -346,12 +341,8 @@
     </div>
 </section>
 
-<section class="slide cover h   ">
-    <img src="images/catsPingPong.gif" alt="Sand-receive data"/>
-</section>
-
 <section class="slide">
-    <h2><small>Generator.</small> Receive data</h2>
+    <h2><small>Generator.</small> yield</h2>
     <pre class="javascript">
         <code>function *foo() {</code>
         <code>    <mark>yield 'Some data';</mark></code>
@@ -372,76 +363,13 @@
 </section>
 
 <section class="slide">
-    <h2><small>Generator.</small> Числа Фибоначчи</h2>
-    <pre class="javascript">
-        <code>function* fibonacci() {</code>
-        <code>    var a = 0, b = 1, tmp;</code>
-        <code>    while (true) {</code>
-        <code>        yield a;</code>
-        <code>        tmp = a;</code>
-        <code>        a = b;</code>
-        <code>        b = tmp + b;</code>
-        <code>    }</code>
-        <code>}</code>
-        <code>        </code>
-        <code>var it = fibonacci();</code>
-        <code>console.log(it.next().value); // 0</code>
-        <code>console.log(it.next().value); // 1</code>
-        <code>console.log(it.next().value); // 1</code>
-        <code>console.log(it.next().value); // 2</code>
-        <code>console.log(it.next().value); // 3</code>
-        <code>console.log(it.next().value); // 5</code>
-    </pre>
-</section>
-
-<section class="slide">
-    <h2><small>Generator.</small> Send data</h2>
-    <pre class="javascript">
-        <code>function *foo() {</code>
-        <code>    var name = <mark>yield;</mark></code>
-        <code>    console.log('Hello, ' + name);</code>
-        <code>}</code>
-        <code> </code>
-        <code>var it = foo();</code>
-        <code>it.next();</code>
-        <code><mark>it.next('EkbJS');</mark></code>
-    </pre>
-</section>
-
-<!-- Не забыть рассказать про приоритеты -->
-<section class="slide">
-    <h2><small>Generator.</small> Send data</h2>
-    <pre class="javascript">
-        <code>function *foo() {</code>
-        <code>    var name = <mark>'EkbJS';</mark></code>
-        <code>    console.log('Hello, ' + name);</code>
-        <code>}</code>
-        <code> </code>
-        <code>var it = foo();</code>
-        <code>it.next();</code>
-        <code><mark>it.next('EkbJS');</mark></code>
-    </pre>
-
-    <div class="console_port">
-        <h3>Console:</h3>
-        <pre class="console">
-            <code>&gt; Hello, EkbJS</code>
-        </pre>
-    </div>
-</section>
-
-<section class="slide">
     <h2>Generator</h2>
     <pre class="javascript">
-        <code>var getUnpaidFines = co.wrap(function *(carNumber) {</code>
-        <code>    var fines = yield getFinesByCarNumber(carNumber);</code>
-        <code>    var isUnpaidFines = yield fines.map(isFineUnpaid);</code>
+        <code>co(function *getUnpaidFines(carNumber) {</code>
+        <code>    var fines = yield <mark>getFinesByCarNumber</mark>(carNumber);</code>
+        <code>    var isUnpaidFines = yield fines.map(<mark>isFineUnpaid</mark>);</code>
         <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
-        <code>});</code>
-    </pre>
-    <br/>
-    <pre class="javascript">
-        <code>getUnpaidFines('A263BC')</code>
+        <code>}) </code>
         <code>    .then(console.log.bind(console))</code>
         <code>    .catch(console.error.bind(console));</code>
     </pre>
@@ -452,6 +380,16 @@
     <blockquote>Generator based control flow goodness for nodejs and the browser, using promises,
         letting you write non-blocking code in a nice-ish way.</blockquote>
     <a href="https://github.com/tj/co">https://github.com/tj/co</a>
+    <pre class="javascript">
+        <code>co(function* () {</code>
+        <code>    var value = yield Promise.resolve(true);</code>
+        <code>    return value;</code>
+        <code>}).then(function (value) {</code>
+        <code>    console.log(value);</code>
+        <code>}, function (err) {</code>
+        <code>    console.error(err.stack);</code>
+        <code>});</code>
+    </pre>
 </section>
 
 <section class="slide">
@@ -510,6 +448,11 @@
     </ul>
 </section>
 
+<section class="slide cover w" style="text-align: center; ">
+    <img src="images/happyCat.jpg" alt="happyCat"/>
+    <h2>Спасибо за внимание!</h2>
+</section>
+
 <div class="progress">
     <div></div>
 </div>
@@ -525,8 +468,8 @@
         console.log('getFinesByCarNumber start', carNumber);
         setTimeout(function () {
             console.log('getFinesByCarNumber end', carNumber);
-            cb(null, ['001', '002', '003', '004', '005']);
-        }, 1000 * Math.random());
+            cb(null, ['001', '002', '003']);
+        }, 3000);
     });
     var isFineUnpaid = Promise.promisify(function isFineUnpaid(fine) {
         var cb = arguments[arguments.length - 1];
@@ -534,7 +477,7 @@
         setTimeout(function () {
             console.log('isFineUnpaid end', fine);
             cb(null, Math.random() > 0.5);
-        }, 2000 * Math.random());
+        }, 5000 * Math.random());
     });
     var filterUnpaidFines = function filterUnpaidFines(fines, isUnpaidFines) {
         var unpaidFines = [];
